# KStg

./: .gitignore  build.gradle.kts  engine.ini  readme.MD  settings.gradle.kts
CrashHandler/: build.gradle.kts
cpp_bootstrapper/: .clang-format  CMakeLists.txt  jar_settings.txt  kstg.vmoptions  main.cpp  util.cpp  util.h
designer/: config.ini  designer_ui_en_US.yml
localizations/: designer_en_US.yml
replay/: KStg-TestReplay-2023-08-20_12.58.06_0.rep
resources/: .comments
src/main/kotlin/top/kkoishi/stg/: DefinitionsLoader.kt  Heap.kt  InternalSecrets.kt  Loader.kt  Resources.kt
src/main/kotlin/top/kkoishi/stg/audio/: Audio.kt  AudioPlayer.kt  Sounds.kt
src/main/kotlin/top/kkoishi/stg/boot/: Bootstrapper.kt  FastBootstrapper.kt  Settings.kt
src/main/kotlin/top/kkoishi/stg/common/: AbstractStage.kt  AnimatedRenderableObject.kt  BossAction.kt  Bullet.kt  Defaults.kt  Dialogs.kt  Enemy.kt  Entity.kt  Interfaces.kt  Player.kt  RenderableObject.kt  ScreenRenderObject.kt  SideBar.kt  Stage.kt  StageAction.kt  package-info.java
src/main/kotlin/top/kkoishi/stg/exceptions/: CrashReportGenerator.kt  CrashReporter.kt  FailedLoadingResourceException.kt  FailedLoadingTextureException.kt  InternalError.kt  ScriptException.kt  (+1 more)
src/test/kotlin/: Test.kt
test/: fonts.ini
test/audio/: effects.txt
test/common/dialogs/: test_0.csv
test/common/stages/: stage_0.txt
test/diff_test/: out.txt
test/gfx/: boss.kgfx  bullets.kgfx  bullets.txt  faces.kgfx  fonts.kgfx  items.kgfx  player.kgfx  ui_objects.kgfx
test/localization/: test_zh_CN.yml
(+113 files in other folders)
